--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
+*-debug.*
 
 # Editor directories and files
 .idea
@@ -24,3 +25,5 @@ pnpm-debug.log*
 *.njsproj
 *.sln
 *.sw?
+
+*.cache
